# Document-Scanner

./: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
src/CVBasics/: CVBasics.cpp  CVBasics.h
src/ColDetect/: ColDetect.cpp  ColDetect.h
src/DocScanner/: DocScanner.cpp  DocScanner.h
src/FaceDetect/: FaceDetect.cpp  FaceDetect.h
src/ShapeDetect/: ShapeDetect.cpp  ShapeDetect.h
src/VPainter/: VPainter.cpp  VPainter.h
src/Warp/: Warp.cpp  Warp.h
